--- a/protective-measure/encryption.html
+++ b/protective-measure/encryption.html
@@ -273,9 +273,16 @@
 				</div>
 			</nav>
 			<div class="absolute inset-0 bg-gradient-to-b from-transparent to-black"></div>
-			<div class="relative max-w-4xl mx-auto mt-48">
-				<h4 class="text-6xl font-medium">Data Encryption</h4>
-			</div>
+			<div class="relative max-w-6xl mx-auto mt-20 text-left z-10">
+                <div class="flex items-center text-gray-300 md:px-2 px-4 space-x-2">
+                    <a class="text-sm" href="../protective-measure.html">Protective Measures</a>
+                    <span class="text-gray-300 text-sm">/</span>
+                    <a href="software-protective-measures.html" class="text-sm">Software Protective Measures</a>
+					<span class="text-gray-300 text-sm">/</span>
+					<a href="#" class="text-sm">Data Encryption</a>
+                </div>
+                <h4 class="text-6xl font-medium text-center mt-20">Data Encryption</h4>
+            </div>
 		</div>
 		<div class="bg-gradient-to-b from-black to-[#141528]">
 			<div class="max-w-6xl mx-auto px-6 py-32 space-y-10">
