--- a/protective-measure/software-protective-measures.html
+++ b/protective-measure/software-protective-measures.html
@@ -305,7 +305,7 @@
 			<div class="grid md:grid-cols-3 sm:grid-cols-2 grid-cols-1 gap-y-8 max-w-6xl mx-auto py-16 gap-4">
 
 				<div class=" bg-[#141528] border border-indigo-900 rounded space-y-2">
-					<img src="#" class="w-full h-80 object-cover rounded-t" alt="">
+					<img src="../assets/antivirus-software.jpg" class="w-full h-80 object-cover rounded-t" alt="">
 					<div class="p-4">
 						<h5 class=" font-medium text-2xl">Antivirus Software</h5>
 						<p class="my-2">Antivirus software helps detect and remove harmful programs like viruses, worms, and trojans from your computer. It scans files and programs for known threats and prevents them from causing damage. Regular updates are important so it can catch the newest types of malware.</p>
@@ -317,7 +317,7 @@
 				</div>
 
                 <div class=" bg-[#141528] border border-indigo-900 rounded space-y-2">
-					<img src="#" class="w-full h-80 object-cover rounded-t" alt="">
+					<img src="../assets/encryption.jpg" class="w-full h-80 object-cover rounded-t" alt="">
 					<div class="p-4">
 						<h5 class=" font-medium text-2xl">Encryption</h5>
 						<p class="my-2">Encryption protects data by turning it into unreadable code unless you have the right key to unlock it. This keeps information safe even if someone steals it or intercepts it. It’s commonly used in emails, cloud storage, and websites with HTTPS.</p>
@@ -329,7 +329,7 @@
 				</div>
 
                 <div class=" bg-[#141528] border border-indigo-900 rounded space-y-2">
-					<img src="#" class="w-full h-80 object-cover rounded-t" alt="">
+					<img src="../assets/authentication.jpg" class="w-full h-80 object-cover rounded-t" alt="">
 					<div class="p-4">
 						<h5 class=" font-medium text-2xl">Multi Factor Authentication</h5>
 						<p class="my-2">MFA adds extra steps to logging in, like entering a code from your phone after typing your password. It helps keep accounts safe even if someone steals your password. This makes it harder for hackers to break in.</p>
@@ -341,7 +341,7 @@
 				</div>
 
                 <div class=" bg-[#141528] border border-indigo-900 rounded space-y-2">
-					<img src="#" class="w-full h-80 object-cover rounded-t" alt="">
+					<img src="../assets/firewall.jpg" class="w-full h-80 object-cover rounded-t" alt="">
 					<div class="p-4">
 						<h5 class=" font-medium text-2xl">Firewall</h5>
 						<p class="my-2">Firewalls act like a security gate between your device and the internet, blocking harmful traffic. They help prevent hackers or viruses from accessing your system. Firewalls can be software-based, hardware-based, or both.
@@ -354,7 +354,7 @@
 				</div>
 
                 <div class=" bg-[#141528] border border-indigo-900 rounded space-y-2">
-					<img src="#" class="w-full h-80 object-cover rounded-t" alt="">
+					<img src="../assets/firewall.jpg" class="w-full h-80 object-cover rounded-t" alt="">
 					<div class="p-4">
 						<h5 class=" font-medium text-2xl">Secure Network</h5>
 						<p class="my-2">A secure network uses tools like strong passwords, encrypted Wi-Fi, and access controls to protect data and devices. It helps stop hackers from getting into the system through the network. Businesses often use VPNs and separate networks for different users to stay safe.</p>
@@ -366,7 +366,7 @@
 				</div>
 
                 <div class=" bg-[#141528] border border-indigo-900 rounded space-y-2">
-					<img src="#" class="w-full h-80 object-cover rounded-t" alt="">
+					<img src="../assets/firewall.jpg" class="w-full h-80 object-cover rounded-t" alt="">
 					<div class="p-4">
 						<h5 class=" font-medium text-2xl">Update Programs and Systems Regularly</h5>
 						<p class="my-2">Keeping your software and systems updated is important because updates fix security holes and bugs. Hackers often target outdated programs that don’t have the latest protection. Automatic updates help make sure everything stays secure.</p>
