--- a/famous-cyber-attacks/2016-comelec-data-breach.html
+++ b/famous-cyber-attacks/2016-comelec-data-breach.html
@@ -9,7 +9,7 @@
 	</head>
 	<body class="text-white text-roboto">
 		<!-- NAVIGATION -->
-		<div id="hero" class="w-full p-2 pb-72 text-center bg-[url('../assets/famous-cyber-attacks/data-breach-comelec.jpg')] bg-cover bg-center bg-no-repeat relative">
+		<div id="hero" class="w-full p-2 pb-72 text-center bg-[url('../assets/famous-cyber-attacks/data-breach-comelecCc.jpg')] bg-cover bg-center bg-no-repeat relative">
             <nav class="absolute inset-0 z-10">
                 <div class="w-full p-4 flex items-center justify-between">
                     <div class="flex items-center space-x-4 md:w-auto w-full justify-between">
@@ -289,7 +289,7 @@
                 </div>
             </nav>
 
-			<div class="absolute inset-0 bg-gradient-to-b from-transparent via-black/40 to-black"></div>
+			<div class="absolute inset-0 bg-gradient-to-b from-black/40 to-black"></div>
 
             <div class="relative max-w-6xl mx-auto mt-20 text-left z-10">
                 <div class="flex items-center text-gray-300 md:px-2 px-4 space-x-2">
