--- a/recent-attacks.html
+++ b/recent-attacks.html
@@ -308,7 +308,7 @@
                 </div>
             </div>
 
-            <div class="bg-[#141528] p-4 rounded text-white space-y-4 border border-indigo-900">
+            <div class="bg-[#141528] p-4 rounded text-white space-y-4 border border-indigo-900 hover:bg-[#1D1F3E] ease duration-300">
                 <h5 class="text-xl font-medium">Salt Typhoon Cyber Attack</h5>
                 <p>Prepare for a dive into the shadowy realm of cyber espionage, where whispers of nation-state actors and clandestine operations abound! Meet Salt Typhoon, a cyber entity shrouded in mystery, suspected of having ties to Chinese intelligence. Their alleged targets? Major US telecom titans and government agencies, no less! Imagine them as digital ninjas, silently exploiting vulnerabilities in the very systems designed to keep our communications secure. This is a high-stakes game of digital cat and mouse, with the potential for far-reaching consequences in the world of national security and intelligence.</p>
                 <div>
