--- a/recent-attacks.html
+++ b/recent-attacks.html
@@ -340,7 +340,7 @@
                 </div>
             </div>
 
-            <div class="bg-[#141528] p-4 rounded text-white space-y-4 border border-indigo-900">
+            <div class="bg-[#141528] p-4 rounded text-white space-y-4 border border-indigo-900 hover:bg-[#1D1F3E] ease duration-300">
                 <h5 class="text-xl font-medium">Schneider Electric ransomware Attack</h5>
                 <p>Let's journey into the intricate world of industrial giants and the cyber threats they face. Schneider Electric, a powerhouse in automation and digital transformation, found itself in a digital tug-of-war with the Hellcat ransomware group. Picture a locked digital vault containing project secrets and user data, with a hefty ransom demand echoing in the digital corridors. While the core operations remained seemingly untouched, the potential exposure of sensitive information adds a layer of suspense to this industrial cyber drama. It's a stark reminder that even the most robust enterprises are not immune to the persistent claws of ransomware.</p>
                 <div>
@@ -348,7 +348,7 @@
                 </div>
             </div>
 
-            <div class="bg-[#141528] p-4 rounded text-white space-y-4 border border-indigo-900">
+            <div class="bg-[#141528] p-4 rounded text-white space-y-4 border border-indigo-900 hover:bg-[#1D1F3E] ease duration-300">
                 <h5 class="text-xl font-medium">ICBC Financial Services Ransomware Attack</h5>
                 <p>Get ready for a financial thriller with global implications! ICBC, a banking behemoth, found itself caught in a digital double whammy. First, a LockBit ransomware attack threw a wrench in US Treasury trades, causing ripples in the massive financial markets. Then, just when things seemed to settle, a data breach hit their London branch! This isn't just about one bank's troubles; it's a nail-biting illustration of how interconnected our financial world is and the potential for cyberattacks to send shockwaves across continents.</p>
                 <div>
@@ -356,7 +356,7 @@
                 </div>
             </div>
 
-            <div class="bg-[#141528] p-4 rounded text-white space-y-4 border border-indigo-900">
+            <div class="bg-[#141528] p-4 rounded text-white space-y-4 border border-indigo-900 hover:bg-[#1D1F3E] ease duration-300">
                 <h5 class="text-xl font-medium">MGM Resorts Phishing Attack</h5>
                 <p>Welcome to the dazzling world of Las Vegas, where the stakes are always high, even in the digital realm! MGM Resorts, a titan of the Strip, found its glittering operations plunged into chaos by a cunning cyberattack, reportedly orchestrated by the Scattered Spider gang. Imagine slot machines going silent and reservation systems grinding to a halt – a digital blackout in the city that never sleeps! The subsequent legal fallout over compromised data adds another layer to this Sin City cyber saga, highlighting the very real consequences of digital vulnerabilities in the entertainment industry.</p>
                 <div>
@@ -364,7 +364,7 @@
                 </div>
             </div>
 
-            <div class="bg-[#141528] p-4 rounded text-white space-y-4 border border-indigo-900">
+            <div class="bg-[#141528] p-4 rounded text-white space-y-4 border border-indigo-900 hover:bg-[#1D1F3E] ease duration-300">
                 <h5 class="text-xl font-medium">Boeing Ransomware Attack</h5>
                 <p>Fasten your seatbelts for a high-flying cyber tale targeting the giants of the aerospace industry! Boeing, the name synonymous with aviation innovation, found itself in the crosshairs of the notorious LockBit ransomware group. Picture this: a $200 million ransom demand hanging in the digital air! Even though some data took an unauthorized flight online, Boeing assured the world that flight safety remained grounded in security. It's a stark reminder that even the most technologically advanced companies face relentless cyber threats, and the stakes are sky-high when it comes to protecting critical infrastructure.</p>
                 <div>
@@ -372,7 +372,7 @@
                 </div>
             </div>
 
-            <div class="bg-[#141528] p-4 rounded text-white space-y-4 border border-indigo-900">
+            <div class="bg-[#141528] p-4 rounded text-white space-y-4 border border-indigo-900 hover:bg-[#1D1F3E] ease duration-300">
                 <h5 class="text-xl font-medium">TruePill Data Breach</h5>
                 <p>Let's step into the world of digital pharmacies, where convenience meets the critical need for data privacy. Truepill, a company powering online pharmacies, experienced a data breach that sent ripples of concern through the digital healthcare landscape. Imagine sensitive personal information falling into the wrong hands – a chilling reminder of the vulnerabilities that can exist when our health and technology intersect. This story underscores the paramount importance of safeguarding our digital well-being and the trust we place in companies handling our most private details.</p>
                 <div>
