--- a/recent-attacks.html
+++ b/recent-attacks.html
@@ -20,7 +20,7 @@
                     </div>
                     <ul class="md:flex items-center space-x-4">
                         <li>
-                            <a href="#" class="hidden md:block">Home</a>
+                            <a href="index.html" class="hidden md:block">Home</a>
                         </li>
                         <li>
                             <a href="#" class="hidden md:block">Recent News</a>
