update: fixed max width, breadcrumb, hero section, and hover effect

--- a/financial-impact-of-breaches.html
+++ b/financial-impact-of-breaches.html
@@ -285,14 +285,14 @@
                 </div>
             </nav>
 
-			<div class="max-w-7xl mx-auto px-10">
+			<div class="max-w-6xl mx-auto px-10">
                 <div class="flex items-center text-gray-300 space-x-2 mt-10">
-                    <a class="text-sm" href="#">Companies Affected</a>
+                    <a class="text-sm" href="./companies-affected.html">Companies Affected</a>
                     <span class="text-gray-300 text-sm">/</span>
-                    <a href="./companies-affected.html" class="text-sm">Financial Impact of Breaches</a>
+                    <a href="./financial-impact-of-breaches.html" class="text-sm">Financial Impact of Breaches</a>
                 </div>
                 <div class="grid grid-cols-2 gap-4 md:px-2 px-4">
-                    <div class="max-w-7xl mx-auto flex items-center justify-center">
+                    <div class="max-w-6xl mx-auto flex items-center justify-center">
                         <div class="">
                             <h3 class="text-6xl font-semibold">Financial Impact of Breaches</h3>
                             <div class="flex items-center space-x-6 mt-2 text-gray-300">
@@ -309,7 +309,7 @@
 			</div>
 		</div>
 
-		<div class="mt-10 space-y-8 max-w-7xl mx-auto px-10">
+		<div class="mt-10 space-y-8 max-w-6xl mx-auto px-10">
             <div class="space-y-4 mb-10 pb-10" id="overview">
                 <h4 class="text-3xl font-medium text-purple-300" id="fines-penalties">Regulatory Fines and Penalties</h4>
                 <p class="text-justify">Many companies face major fines due to noncompliance with data protection regulations following a breach. These penalties vary by country and industry but can reach into the millions. Regulatory bodies may also require businesses to undergo expensive audits or reforms. Failing to meet security standards can be considered negligence, increasing the severity of the fines. As IBM's 2023 report points out, breaches in highly regulated industries like healthcare and finance cost significantly more on average due to legal consequences.</p>
@@ -327,10 +327,7 @@
                 <p class="text-justify">Breaches often force companies to shut down parts of their operations, resulting in lost sales and productivity. IBM’s report showed that lost business represents the largest share of the total breach cost. Customers may stop using the company’s services out of fear, leading to revenue loss and brand damage. While trying to recover, companies must also spend large amounts on public relations, system upgrades, and staff training. These added expenses, combined with lost revenue, create serious financial disruption</p>
             </div>
 
-<<<<<<< HEAD
-=======
             <!-- REFERENCES ACCORDION -->
->>>>>>> 063fc6f (update: updated navigation, text justify, and padding)
             <div>
                 <details class="rounded border shadow border-indigo-900" open>
                     <summary class="cursor-pointer px-4 py-3 bg-[#141528] border border-indigo-900 rounded font-medium">
@@ -338,13 +335,8 @@
                     </summary>
                     <div class="px-4 py-2 bg-[#141528] border border-indigo-900">
                     <ul class="list-disc list-inside space-y-1">
-<<<<<<< HEAD
-                        <li>https://www.metacompliance.com/blog/data-breaches/5-damaging-consequences-of-a-data-breach</li>
-                        <li>https://www.linkedin.com/pulse/financial-impact-data-breaches-2025-alvin-chang-msc-mbcs-7riqe</li>
-=======
                         <li>Mbcs, A. C. M. (2025, March 10). The financial impact of data breaches in 2025. https://www.linkedin.com/pulse/financial-impact-data-breaches-2025-alvin-chang-msc-mbcs-7riqe</li>
                         <li>Strawbridge, G. (2025, April 4). 5 Damaging consequences of data breach | MetaCompliance. MetaCompliance. https://www.metacompliance.com/blog/data-breaches/5-damaging-consequences-of-a-data-breach</li>
->>>>>>> 063fc6f (update: updated navigation, text justify, and padding)
                     </ul>
                     </div>
                 </details>
