--- a/legal-and-ethical-consequences.html
+++ b/legal-and-ethical-consequences.html
@@ -285,7 +285,7 @@
                 </div>
             </nav>
 
-			<div class="md:px-2 px-4 max-w-6xl mx-auto">
+			<div class="max-w-6xl mx-auto px-10">
                 <div class="flex items-center text-gray-300 space-x-2 mt-10">
                     <a class="text-sm" href="./companies-affected.html">Companies Affected</a>
                     <span class="text-gray-300 text-sm">/</span>
@@ -295,6 +295,10 @@
                     <div class="max-w-7xl mx-auto flex items-center justify-center">
                         <div class="">
                             <h3 class="text-6xl font-semibold">Legal and Ethical Consequences</h3>
+                            <div class="flex items-center space-x-6 mt-2 text-gray-300">
+                                <a href="#liability">Liability and Accountability</a><p>|</p>
+                                <a href="#law">Laws and Regulations</a>
+                            </div>
                         </div>
                     </div>
                     <div class="flex justify-center items-center">
@@ -304,16 +308,16 @@
 			</div>
 		</div>
 
-		<div class="md:px-2 px-4 mt-10 space-y-8 max-w-6xl mx-auto">
-            <div class="space-y-4 bg-[#111436] p-6 border border-indigo-900 rounded-lg" id="method">
-                <h4 class="text-3xl font-medium text-purple-300">Liability and Accountability</h4>
+		<div class="mt-10 space-y-8 max-w-6xl mx-auto px-10">
+            <div class="space-y-4 bg-[#111436] p-6 border border-indigo-900 rounded-lg hover:bg-[#1D1F3E] ease duration-300" id="method">
+                <h4 id="liability" class="text-3xl font-medium text-purple-300">Liability and Accountability</h4>
                 <p>When companies fail to protect personal data, they can be held legally and financially responsible. Under GDPR, companies can be fined heavily and must demonstrate that they took proper steps to protect data. CCPA allows consumers to sue companies for negligence after a data breach. Executives and IT teams may face internal consequences like termination or demotion. Ignoring security risks is seen as a failure of duty, not just bad management. Laws like GDPR and CCPA are making it clear that accountability for data breaches goes all the way to the top. Legal action can follow if businesses are found to be negligent. Maintaining cybersecurity is a legal requirement, not just a best practice.</p>
             </div>
 
 
 
             <div class="md:px-2 px-4 space-y-4" id="data-compromised">
-                <h4 class="text-3xl font-medium text-purple-300">Laws and Regulations</h4>
+                <h4 class="text-3xl font-medium text-purple-300" id="law">Laws and Regulations</h4>
                 <ul class="space-y-4">
                     <li class="space-y-2">
                         <h5 class="text-lg font-medium">GDPR (General Data Protection Regulation)</h5>
