--- a/recovery-mitigation-measures.html
+++ b/recovery-mitigation-measures.html
@@ -285,16 +285,21 @@
                 </div>
             </nav>
 
-			<div class="max-w-7xl mx-auto">
+			<div class="max-w-6xl mx-auto px-10">
                 <div class="flex items-center text-gray-300 space-x-2 mt-10">
-                    <a class="text-sm" href="#">Companies Affected</a>
+                    <a class="text-sm" href="./companies-affected.html">Companies Affected</a>
                     <span class="text-gray-300 text-sm">/</span>
-                    <a href="#" class="text-sm">Recovery & Mitigation Measures</a>
+                    <a href="./recovery-mitigation-measures.html" class="text-sm">Recovery & Mitigation Measures</a>
                 </div>
                 <div class="grid grid-cols-2 gap-4 md:px-2 px-4">
                     <div class="max-w-7xl mx-auto flex items-center justify-center">
                         <div class="">
-                            <h3 class="text-6xl font-semibold">Recovery & Mitigation Measures</h3>
+                            <h3 class="text-4xl font-semibold">Recovery & Mitigation Measures</h3>
+                            <div class="flex items-center space-x-6 mt-2 text-gray-300">
+                                <a href="#action">Quick Action After the Breach</a><p>|</p>
+                                <a href="#fixing">Fixing Security Problems</a><p>|</p>
+                                <a href="#recommendations">Recovery Recommendations</a>
+                            </div>
                         </div>
                     </div>
                     <div class="flex justify-center items-center">
@@ -304,21 +309,21 @@
 			</div>
 		</div>
 
-		<div class="mt-10 space-y-8 max-w-7xl mx-auto">
-            <div class="space-y-4" id="overview">
+		<div class="mt-10 space-y-8 max-w-6xl mx-auto px-10">
+            <div class="space-y-4" id="action">
                 <h4 class="text-3xl font-medium text-purple-300">Quick Action After the Breach</h4>
                 <p>When a data breach occurs, companies often begin by releasing public statements through press releases or social media to inform customers, stakeholders, and the public. Prompt communication helps maintain transparency and manage public trust. Simultaneously, affected parties such as customers and business partners are notified directly about the incident. Internal investigations are immediately launched to determine how the breach happened and which systems or data were affected. Legal teams are brought in early to ensure the response complies with data protection laws and to handle any potential liabilities. A specialized team is assembled to manage crisis communications and coordinate the company's internal and external responses.</p>
                 <p>Companies also act quickly to isolate compromised systems to prevent further data exposure or damage. This step is crucial to contain the breach and stop it from spreading to other parts of the network. Incident response plans, which are pre-established protocols, are activated to guide the next steps. Cybersecurity professionals, both internal and third-party experts, are engaged to assess the full extent of the breach and provide technical recommendations. In the meantime, temporary solutions may be implemented to restore basic operations and minimize disruption to customers while a more permanent recovery plan is developed.</p>
             </div>
 
-            <div class="space-y-4 bg-[#111436] p-6 border border-indigo-900 rounded-lg" id="method">
+            <div class="space-y-4 bg-[#111436] p-6 border border-indigo-900 rounded-lg hover:bg-[#1D1F3E] ease duration-300" id="fixing">
                 <h4 class="text-3xl font-medium text-purple-300">Fixing Security Problems</h4>
                 <p>After a breach, companies begin by identifying the vulnerabilities that attackers exploited to gain access to their systems. Once these weak points are known, they quickly patch outdated software and implement stronger authentication methods to prevent similar incidents in the future. Antivirus programs and firewall configurations are thoroughly reviewed and updated to ensure they are providing optimal protection. In many cases, organizations hire third-party cybersecurity firms to conduct forensic audits and gain an expert perspective on the breach. Employee accounts are often reset, and access controls are carefully reviewed to limit exposure. Additionally, staff members receive security awareness training to help them recognize and avoid common threats such as phishing and social engineering. Finally, companies enhance their network monitoring capabilities to detect and respond to suspicious activities more effectively in the future.</p>
             </div>
 
 
-            <div class="space-y-4" id="data-compromised">
-                <h4 class="text-3xl font-medium text-purple-300">Quick Action After the Breach</h4>
+            <div class="space-y-4" id="recommendations">
+                <h4 class="text-3xl font-medium text-purple-300">Recovery Recommendations</h4>
                 <ul class="space-y-4">
                     <li class="space-y-2">
                         <h5 class="text-lg font-medium">Recommendation 1</h5>
@@ -343,7 +348,8 @@
                     </summary>
                     <div class="px-4 py-2 bg-[#141528] border border-indigo-900">
                     <ul class="list-disc list-inside space-y-1">
-                        <li>https://www.ibm.com/reports/data-breach</li>
+                        <li>Cost of a data breach 2024 | IBM. (n.d.). https://www.ibm.com/reports/data-breach</li>
+                        <li>S, O. (2025, January 16). The real cost of data breaches in 2024-2025. Hire remote developers | GetTrusted. https://gettrusted.io/blog/the-real-cost-of-data-breaches-in-2024-2025/</li>
                     </ul>
                     </div>
                 </details>
