update: fixed max width, breadcrumb, hero section, and hover effect

--- a/financial-impact-of-breaches.html
+++ b/financial-impact-of-breaches.html
@@ -316,7 +316,7 @@
                 <p>Even after fines are paid, companies may face lawsuits from affected customers or partners. These legal battles can last months or even years, creating financial strain. Lawsuits often seek compensation for damages caused by identity theft, fraud, or business losses. Legal costs, including settlements, increase the overall cost of the breach. IBM reported that 51% of organizations planned to increase security investments after experiencing legal and financial backlash.</p>
             </div>
 
-            <div class="space-y-4 bg-[#111436] p-6 border border-indigo-900 rounded-lg mb-10mb-10 pb-10mb-10 pb-10" id="impact-stock">
+            <div class="space-y-4 bg-[#111436] p-6 border border-indigo-900 rounded-lg mb-10mb-10 pb-10mb-10 pb-10 hover:bg-[#1D1F3E] ease duration-300" id="impact-stock">
                 <h4 class="text-3xl font-medium text-purple-300">Impact on Stock Prices and Market Value</h4>
                 <p class="text-justify">Data breaches can cause immediate and long-lasting drops in a company’s stock value. According to Harvard Business Review, companies experience an average stock price drop of 7.5% following a publicized breach. Investors lose confidence in the organization’s security posture, which can hurt future investments. Depending on the severity of the breach, the market may take weeks or months to recover. In the worst cases, the loss in market value can permanently affect the company’s position in its industry.</p>
             </div>
