update: completed all links in navbar and footer

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                             <a href="./concepts-of-cybersecurity.html" class="hidden md:block">Learn Now</a>
                         </li>
                         <li>
-                            <a href="#" class="hidden md:block">Contact Us</a>
+                            <a href="./contact-us.html" class="hidden md:block">Contact Us</a>
                         </li>
                         <li>
                             <button class="cursor-pointer p-2 rounded" id="menu-toggle">
@@ -387,7 +387,7 @@
                             <li class="text-gray-300 text-sm"><a href="./recent-attacks.html">Recent News</a></li>
                             <li class="text-gray-300 text-sm"><a href="./concepts-of-cybersecurity.html">Learn Now</a></li>
                             <li class="text-gray-300 text-sm"><a href="./about-us.html">About Us</a></li>
-                            <li class="text-gray-300 text-sm"><a href="#">Contact Us</a></li>
+                            <li class="text-gray-300 text-sm"><a href="./contact-us.html">Contact Us</a></li>
                         </ul>
                     </div>
                     <div>
