update: fixed breadcrumb and max width

--- a/protective-measure/software-protective-measures.html
+++ b/protective-measure/software-protective-measures.html
@@ -285,7 +285,15 @@
                 </div>
             </nav>
 
-			<div class="grid md:grid-cols-2 grid-cols-1 max-w-7xl mx-auto mt-8">
+            <div class="grid md:grid-cols-2 grid-cols-1 max-w-6xl mx-auto">
+                <div class="flex items-center text-gray-300 md:px-2 px-4 space-x-2">
+                    <a class="text-sm" href="../protective-measure.html">Protective Measures</a>
+                    <span class="text-gray-300 text-sm">/</span>
+                    <a href="./software-protective-measures.html" class="text-sm">Software Protective Measures</a>
+                </div>
+            </div>
+            
+			<div class="grid md:grid-cols-2 grid-cols-1 max-w-6xl mx-auto mt-8">
 				<div class="flex items-center justify-center">
                     <div class="block px-4">
                         <h4 class="text-6xl font-medium ">Software <span class="text-[#6366F1]">Protective Measures</span></h4>
