update: hover animation

--- a/protective-measure/software-protective-measures.html
+++ b/protective-measure/software-protective-measures.html
@@ -312,7 +312,7 @@
         <div class="">
 			<div class="grid md:grid-cols-3 sm:grid-cols-2 grid-cols-1 gap-y-8 max-w-6xl mx-auto py-16 gap-4">
 
-				<div class=" bg-[#141528] border border-indigo-900 rounded space-y-2">
+				<div class=" bg-[#141528] border border-indigo-900 rounded space-y-2 hover:bg-[#1D1F3E] ease duration-300">
 					<img src="../assets/antivirus-software.jpg" class="w-full h-80 object-cover rounded-t" alt="">
 					<div class="p-4">
 						<h5 class=" font-medium text-2xl">Antivirus Software</h5>
@@ -324,7 +324,7 @@
 					</div>
 				</div>
 
-                <div class=" bg-[#141528] border border-indigo-900 rounded space-y-2">
+                <div class=" bg-[#141528] border border-indigo-900 rounded space-y-2 hover:bg-[#1D1F3E] ease duration-300">
 					<img src="../assets/encryption.jpg" class="w-full h-80 object-cover rounded-t" alt="">
 					<div class="p-4">
 						<h5 class=" font-medium text-2xl">Encryption</h5>
@@ -336,7 +336,7 @@
 					</div>
 				</div>
 
-                <div class=" bg-[#141528] border border-indigo-900 rounded space-y-2">
+                <div class=" bg-[#141528] border border-indigo-900 rounded space-y-2 hover:bg-[#1D1F3E] ease duration-300">
 					<img src="../assets/authentication.jpg" class="w-full h-80 object-cover rounded-t" alt="">
 					<div class="p-4">
 						<h5 class=" font-medium text-2xl">Multi Factor Authentication</h5>
@@ -348,7 +348,7 @@
 					</div>
 				</div>
 
-                <div class=" bg-[#141528] border border-indigo-900 rounded space-y-2">
+                <div class=" bg-[#141528] border border-indigo-900 rounded space-y-2 hover:bg-[#1D1F3E] ease duration-300">
 					<img src="../assets/firewall.jpg" class="w-full h-80 object-cover rounded-t" alt="">
 					<div class="p-4">
 						<h5 class=" font-medium text-2xl">Firewall</h5>
@@ -361,7 +361,7 @@
 					</div>
 				</div>
 
-                <div class=" bg-[#141528] border border-indigo-900 rounded space-y-2">
+                <div class=" bg-[#141528] border border-indigo-900 rounded space-y-2 hover:bg-[#1D1F3E] ease duration-300">
 					<img src="../assets/firewall.jpg" class="w-full h-80 object-cover rounded-t" alt="">
 					<div class="p-4">
 						<h5 class=" font-medium text-2xl">Secure Network</h5>
@@ -373,7 +373,7 @@
 					</div>
 				</div>
 
-                <div class=" bg-[#141528] border border-indigo-900 rounded space-y-2">
+                <div class=" bg-[#141528] border border-indigo-900 rounded space-y-2 hover:bg-[#1D1F3E] ease duration-300">
 					<img src="../assets/firewall.jpg" class="w-full h-80 object-cover rounded-t" alt="">
 					<div class="p-4">
 						<h5 class=" font-medium text-2xl">Update Programs and Systems Regularly</h5>
