add pictures gallery

--- a/gallery.html
+++ b/gallery.html
@@ -408,6 +408,14 @@
                     <a href="assets/gallery/download.jpg">
                         <img src="assets/gallery/download.jpg" class="rounded-lg shadow-lg w-72 md:h-96 h-48 object-cover">
                     </a>
+
+                    <a href="assets/gallery/dis.png">
+                        <img src="assets/gallery/dis.png" class="rounded-lg shadow-lg w-72 md:h-96 h-48 object-cover">
+                    </a>
+
+                    <a href="assets/gallery/cord.png">
+                        <img src="assets/gallery/cord.png" class="rounded-lg shadow-lg w-72 md:h-96 h-48 object-cover">
+                    </a>
                 </div>
             </div>
 		</div>
