revised photo: under protective measure and protective-measure page

--- a/protective-measure/antivirus-software.html
+++ b/protective-measure/antivirus-software.html
@@ -375,7 +375,7 @@
 								<p>Content filtering blocks harmful or inappropriate content, protecting students and staff online while supporting safe digital learning environments. Multi-user protection enables the creation of multiple profiles with individualized settings, providing tailored security and promoting responsible usage. Remote monitoring allows IT teams to track antivirus activity from a central console, ensuring timely updates, effective threat responses, and enhanced support across multiple devices.</p>
 							</div>
 						</div>
-					</div>
+					</diwv>
 				</div>
 				<div class="space-y-4">
 					<h4 class="font-medium text-2xl text-[#E2C8F1]">Limitations</h4>
