--- a/protective-measure/software-protective-measures.html
+++ b/protective-measure/software-protective-measures.html
@@ -341,7 +341,7 @@
 				</div>
 
                 <div class=" bg-[#141528] border border-indigo-900 rounded space-y-2">
-					<img src="../assets/firewall.jpg" class="w-full h-80 object-cover rounded-t" alt="">
+					<img src="../assets/firewall.webp" class="w-full h-80 object-cover rounded-t" alt="">
 					<div class="p-4">
 						<h5 class=" font-medium text-2xl">Firewall</h5>
 						<p class="my-2">Firewalls act like a security gate between your device and the internet, blocking harmful traffic. They help prevent hackers or viruses from accessing your system. Firewalls can be software-based, hardware-based, or both.
@@ -366,7 +366,7 @@
 				</div>
 
                 <div class=" bg-[#141528] border border-indigo-900 rounded space-y-2">
-					<img src="../assets/firewall.jpg" class="w-full h-80 object-cover rounded-t" alt="">
+					<img src="../assets/update.jpg" class="w-full h-80 object-cover rounded-t" alt="">
 					<div class="p-4">
 						<h5 class=" font-medium text-2xl">Update Programs and Systems Regularly</h5>
 						<p class="my-2">Keeping your software and systems updated is important because updates fix security holes and bugs. Hackers often target outdated programs that don’t have the latest protection. Automatic updates help make sure everything stays secure.</p>
