--- a/protective-measure.html
+++ b/protective-measure.html
@@ -327,7 +327,7 @@
             <div class="bg-[#141528] p-4 rounded text-white border border-indigo-900 transform transition-all duration-300 hover:scale-105 relative flex flex-col md:flex-row mx-10">
                 <a href="./assets/software-protective-measures-container.png" target="image-viewer" class="flex-shrink-0">
                     <img 
-                        src="./assets/software-protective-measures-container.png" 
+                        src="./assets/software-pm-container.jpg" 
                         class="w-full md:w-[300px] h-[220px] object-cover rounded mb-4 md:mb-0 md:mr-4 border border-gray-700 filter grayscale hover:grayscale-0 transition duration-300"
                         alt="Software Security"
                     />
